@@ -19,7 +19,7 @@
 package org.apache.hadoop.ipc;
 
 public interface FairCallQueueMXBean {
-  // Get the size of each subqueue, the index corrosponding to the priority
+  // Get the size of each subqueue, the index corresponding to the priority
   // level.
   int[] getQueueSizes();
   long[] getOverflowedCalls();
